// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EventInfo should render contact info 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-cezn5j-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-dnutt5-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        entryTime
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        dateFormat.datespan end, start
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-grow MuiGrid-grid-xs-12 css-1gjjv03-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.classPlaces
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.name
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1oxte1b-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.dates
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-jxgdt2-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.entries
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-jxgdt2-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.places
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-jxgdt2-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.members
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-fcgc4g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-19jybh2-MuiGrid-root"
          >
            ALO
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1fgirho-MuiGrid-root"
          >
            dateFormat.wdshort date
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
          >
            22
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
          >
            11
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
          >
            2
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1qgu5aj-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.judges
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          Tuomari 1
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-jvfgr9-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.official
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        official name, 0700-official, official@example.com
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1c9v03l-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.secretary
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        secretary name, 0700-secretary, secretary@example.com
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-16z262j-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        paymentDetails
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        123 €
        . 
        <span
          class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
        >
          paymentTimeOptions.registration
        </span>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-xcfqi0-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.priority
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-kypwnb-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            priority.members
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1s57vna-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.description
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        event description text
      </div>
    </div>
  </div>
</div>
`;

exports[`EventInfo should render event information 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-cezn5j-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-dnutt5-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        entryTime
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        dateFormat.datespan end, start
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-grow MuiGrid-grid-xs-12 css-1gjjv03-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.classPlaces
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.name
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1oxte1b-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.dates
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-jxgdt2-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.entries
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-jxgdt2-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.places
            </span>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-jxgdt2-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-va30oc-MuiTypography-root"
            >
              event.classPlacesHeader.members
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-fcgc4g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-19jybh2-MuiGrid-root"
          >
            ALO
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1fgirho-MuiGrid-root"
          >
            dateFormat.wdshort date
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
          >
            22
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
          >
            11
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
          >
            2
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1qgu5aj-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.judges
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          Tuomari 1
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-jvfgr9-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.official
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        Teemu Toimitsija, 040-official, official@example.com
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1c9v03l-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.secretary
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        Siiri Sihteeri, 040-secretary, secretary@example.com
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-16z262j-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        paymentDetails
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        123 €
        . 
        <span
          class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
        >
          paymentTimeOptions.registration
        </span>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-xcfqi0-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.priority
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-kypwnb-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            priority.members
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1s57vna-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-131uqdv-MuiTypography-root"
      >
        event.description
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
      >
        event description text
      </div>
    </div>
  </div>
</div>
`;
